src/test/ui/cmse-nonsecure-entry/trustzone-only.stderr
error[E0775]: `#[cmse_nonsecure_entry]` is only valid for targets with the TrustZone-M extension
  --> $DIR/trustzone-only.rs:5:1
   |
LL | #[cmse_nonsecure_entry]
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0775`.
